--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 </aside>
                 <!--mainText-->
                 <main class="mainContent">
-                    Добрый день
+                    Дорый день
                 </main>
             </div>
             <footer class="copyright"></footer>
         </div>
     </body>
 </html>
+
