--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="other/main/iconXP.png" type="image/x-icon">
+        <link rel="icon" href="icon.png" type="image/x-icon">
 
         <title>Hello, World!</title>
         <script src="index.js" defer></script>
     </head>
     <body>
         <!--header-->
-        <div class="bodyContainer">
+        <div id="bodyContainer">
             <header>
                 <ul id="header"></ul>
             </header>
-            <div class="sidebarAndMainContent">
+            <div id="sidebarAndMainContent">
                 <!--sidebar-->
                 <aside>
-                    <nav class="sidebar"></nav>
+                    <nav id="sidebar"></nav>
                 </aside>
                 <!--mainText-->
-                <main class="mainContent">
-                    Дорый день
+                <main id="mainContent">
+                    Пустата
+                    <a href="https://github.com/Timur1511">GH</a>
                 </main>
             </div>
-            <footer class="copyright"></footer>
+            <footer id="copyright"></footer>
         </div>
     </body>
 </html>
-
