--- a/versions.html
+++ b/versions.html
@@ -30,74 +30,12 @@
                     </p>
 
                     <article class="versionContainer">
-                        <h2 class="version">(Текущая версия) 0.0.8 от 06.10.25</h2>
+                        <h2 class="version">(Текущая версия) 0.1.0 от 12.02.26</h2>
                         <ul>
-                            <li>Немного изменён дизайн</li>
+                            <li>Текст бла-бла бррр</li>
                         </ul>
                     </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version">0.0.7 от 01.09.25</h2>
-                        <ul>
-                            <li>Редактирована информация во вкладке <i>Обо мне</i></li>
-                            <li>Добавлен Блюр заднего фона "Проводника"</li>
-                            <li>Исправлен баг кнопок</li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version">0.0.6 от 30.05.25</h2>
-                        <ul>
-                            <li>Добавлен счётчик посетителей в навигационном меню</li>
-                            <li>Выравнен текст по ширине</li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version">0.0.5 от 28.04.25</h2>
-                        <ul>
-                            <li>Изменён логотип Windows и знак Close</li>
-                            <li>Убраны вкладки <i>Мой Блог</i> и <i>Чат</i></li>
-                            <li>Изменена вкладка <i>Версии</i></li>
-                            <li>Изменена и переименована вкладка <i>Ссылки</i> на <i>Прочее</i></li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version">0.0.4 от 14.04.25</h2>
-                        <ul>
-                            <li>Перенесён и добавлен <i>Roadmap</i> в навигационное меню</li>
-                            <li>Добавлен <i>Мой блог</i> в навигационное меню</li>
-                            <li>Изменена вкладка <i>Обо мне</i></li>
-                            <li>Улучшен чат</li>
-                            <li>Исправлен баг, связанный с неполным расширением интерфейса</li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version">0.0.3 от 10.04.25</h2>
-                        <ul>
-                            <li>Изменён стиль</li>
-                            <li>Упрощён код (cтал более многофункционален)</li>
-                            <li>Поддержка <strong>JavaScript</strong></li>
-                            <li>Добавлены пункты в навигационном меню: <i>О себе, Версии, Чат, О сайте</i></li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version"> 0.0.2 от 09.04.25</h2>
-                        <ul>
-                            <li>Адаптирован размер под устройства (немного)</li>
-                        </ul>
-                    </article>
-
-                    <article class="versionContainer">
-                        <h2 class="version"> 0.0.1 от 07.04.25</h2>
-                        <ul>
-                            <li>Создан сайт (Визуал и боковая панель)</li>
-                        </ul>
-                    </article>
-                    <!--Versoins-->
+                    <!--Versions-->
                 </main>
             </div>
             <footer class="copyright"></footer>
